...
              justifyContent: "center",
            }}
          >
            <Icon size={36} color={colors.success} />
          </View>
          <Text
            testID="cardio-type"
            style={{
              fontSize: 24,
              fontWeight: "bold",
              color: colors.foreground,
            }}
          >
...
            style={{
              fontSize: 16,
              fontWeight: "700",
              color: colors.bg,
            }}
          >
            Done
          </Text>
        </Pressable>
      </ScrollView>
    </SafeAreaView>
  );
}
...
